--- a/hesab/templates/hesab/week_details.html
+++ b/hesab/templates/hesab/week_details.html
@@ -27,7 +27,7 @@
                 <a class="btn btn-success" type="submit" href="{% url 'create_shopping' week.id %}" style="margin: 1px">اضافه
                     کردن خرید</a>
             </div>
-            <div class="col-md-3 class=" col-md-5">
+            <div class="col-md-3>
         </div>
         <div class="col-md-4">
             <a class="btn btn-success" type="submit" href="{% url 'hesab' week.id %}" style="margin: 1px"> حساب ها </a>
