--- a/hesab/templates/hesab/week_list.html
+++ b/hesab/templates/hesab/week_list.html
@@ -5,8 +5,15 @@
 {% endblock title %}
 
 {% block content %}
+
+    <div class="col-md-5"></div>
     <div class="container mt-4">
         <div class="row">
+{#            <div class="col-md-5"></div>#}
+            <div class="col-md-4">
+                <a class="btn btn-warning" type="submit" href="{% url 'create_week' %}" style="margin: 1px">
+                    ساخت هفته</a>
+            </div>
             {% for week in week_list %}
                 <div class="col-9">
                     <div class="card shadow-sm my-3">
@@ -14,7 +21,7 @@
                             <h5 class="card-title">{{ week.name }}</h5>
                             <h6 class="card-subtitle mb-2 text-muted small py-2">{{ week.date_create }}</h6>
                             <p class="card-text py-3">
-                                {{ week.weekshopping.all }}
+                                مجموع هزینه ها : <b style="color: orangered">{{ week.sum }}</b>
                             </p>
                             <a class="btn btn-sm btn-success" href="{% url 'week_details' week.id %}">Read More
                             </a>
