--- a/hesab/templates/hesab/week_details.html
+++ b/hesab/templates/hesab/week_details.html
@@ -24,6 +24,11 @@
             </div>
             <div class="col-md-5"></div>
             <div class="col-md-4">
+                <a class="btn btn-danger" type="submit" href="{% url 'delete_week' week.id %}" style="margin: 1px">حذف هفته</a>
+
+            </div>
+            <div class="col-md-5"></div>
+            <div class="col-md-4">
                 <a class="btn btn-success" type="submit" href="{% url 'create_shopping' week.id %}" style="margin: 1px">اضافه
                     کردن خرید</a>
             </div>
