--- a/hesab/templates/hesab/week_list.html
+++ b/hesab/templates/hesab/week_list.html
@@ -15,7 +15,7 @@
                     ساخت هفته</a>
             </div>
             {% for week in week_list %}
-                <div class="col-9">
+                <div class="col-md-12">
                     <div class="card shadow-sm my-3">
                         <div class="card-body">
                             <h5 class="card-title">{{ week.name }}</h5>
@@ -29,20 +29,6 @@
                     </div>
                 </div>
             {% endfor %}
-            <div class="col-3">
-
-                <div class="card my-4">
-                    <h5 class="card-header">About</h5>
-                    <div class="card-body">
-                        <p class="card-text">We love python and django. So we created a blog site to share our
-                            thoughts</p>
-                        <a href="#"
-                           class="btn btn-sm btn-danger">
-                            More...
-                        </a>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
