--- a/hesab/templates/hesab/week_details.html
+++ b/hesab/templates/hesab/week_details.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block extra %}
-    <p class="btn btn-danger">جمع کل : {{ sum }}</p>
+    <p class="btn btn-light"><b>جمع کل : </b><b>{{ sum }} </b></p>
 {% endblock extra %}
 
 {% block content %}
@@ -41,13 +41,13 @@
                     کردن خرید</a>
                 <div class="col-md-4"></div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3>
         </div>
-{#        <div class="col-md-4">#}
-{#            <a class="btn btn-success" type="submit" href="{% url 'hesab' week.id %}" style="margin: 1px"> حساب ها </a>#}
-{#        </div><div class="col-md-4">#}
-{#            <a class="btn btn-success" type="submit" href="{% url 'last_hesab_refresh' week.id %}" style="margin: 1px"> جزئیات </a>#}
-{#        </div>#}
+        <div class="col-md-4">
+            <a class="btn btn-success" type="submit" href="{% url 'hesab' week.id %}" style="margin: 1px"> حساب ها </a>
+        </div><div class="col-md-4">
+            <a class="btn btn-success" type="submit" href="{% url 'last_hesab_refresh' week.id %}" style="margin: 1px"> جزئیات </a>
+        </div>
         <div class="col-md-3"></div>
 
         <div class="col-9">
