--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,7 +16,7 @@
     </title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">CodingYar.com</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -33,7 +33,7 @@
     </div>
 </nav>
 
-<div class="container-fluid bg-info">
+<div class="container-fluid bg-dark">
     <div class="row py-3">
         <div class="col-md-8 col-md-10 mx-auto">
             <h3 class="my-4 mt-3 text-white">Welcome to  Blog</h3>
