add delete money

--- a/hesab/templates/hesab/week_details.html
+++ b/hesab/templates/hesab/week_details.html
@@ -101,6 +101,9 @@
                                 {{ mon.money }}
                             {% endif %}
                         </td>
+                    <td>
+                        <a href="{% url 'delete_money' mon.id %}" class="btn btn-danger">Delete</a>
+                    </td>
 
 
                     </tr>
