--- a/hesab/templates/hesab/week_details.html
+++ b/hesab/templates/hesab/week_details.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <a class="btn btn-info col-md-4" type="submit" href="{% url 'last_hesab_refresh' week.id %}"
-                   style="margin: 1px">جزئیات
+                   style="margin: 1px">(حتما رفرش شود)جزئیات
                 </a>
                 <div class="col-md-4"></div>
             </div>
